k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deploy
  labels:
    deploy: site
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: site
  template:
    metadata:
      labels:
        pod: site
    spec:
      containers:
      - name: site
        image: gonnux/site
        ports:
        - containerPort: 3000
